--- a/.github/workflows/kasya-workflow.yml
+++ b/.github/workflows/kasya-workflow.yml
@@ -1,9 +1,11 @@
 name: Kasya Workflow Automation
 
 on:
+  # 1. Allow manual triggering to test if the file is valid
+  workflow_dispatch:
+  # 2. Listen for Issue events
   issues:
-    # CRITICAL: We must listen to 'labeled' to catch the 'ready' label being added
-    types: [labeled, opened]
+    types: [opened, labeled]
   issue_comment:
     types: [created]
   issue_reaction:
@@ -17,19 +19,22 @@ permissions:
   contents: write
 
 jobs:
-  # ------------------------------------------------------------------
-  # JOB 1: ACTIVATION (The Fix is in the 'if')
-  # ------------------------------------------------------------------
-  activate_batch:
-    # LOGIC EXPLANATION:
-    # 1. OR: The event is 'labeled' AND the label added was 'ready' (Best Case)
-    # 2. OR: The event is 'opened' AND the issue has the 'ready' label (Backup Case)
-    if: >-
-      (github.event_name == 'issues' && github.event.action == 'labeled' && github.event.label.name == 'ready') ||
-      (github.event_name == 'issues' && github.event.action == 'opened' && contains(github.event.issue.labels.*.name, 'ready'))
+  debug_and_activate:
     runs-on: ubuntu-latest
     steps:
+      # STEP 1: DEBUGGING LOG (This runs every time, so you KNOW it triggered)
+      - name: 🔍 Debug Trigger
+        run: |
+          echo "Event Name: ${{ github.event_name }}"
+          echo "Action: ${{ github.event.action }}"
+          echo "Labels on Issue: ${{ join(github.event.issue.labels.*.name, ', ') }}"
+
+      # STEP 2: ACTIVATION (Only runs if 'ready' is present)
       - name: Build Context and Trigger Planning
+        # The logic is moved here so we can see the job start before it decides to skip
+        if: >-
+          contains(github.event.issue.labels.*.name, 'ready') || 
+          github.event_name == 'workflow_dispatch'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.JULES_PAT }} 
@@ -37,24 +42,22 @@ jobs:
             const issueNumber = context.issue.number;
             const owner = context.repo.owner;
             const repo = context.repo.repo;
-            const actor = context.actor;
-
-            console.log(`🚀 Activation Triggered for Issue #${issueNumber}`);
-
-            // 1. CLEANUP LABELS
+            
+            console.log(`🚀 Starting processing for Issue #${issueNumber}`);
+            
+            // 1. CLEANUP: Remove 'backlog' and 'ready'
             const labelsToRemove = ['backlog', 'ready'];
             for (const name of labelsToRemove) {
               try { await github.rest.issues.removeLabel({ owner, repo, issue_number: issueNumber, name }); } catch (e) {} 
             }
             
             // Assign to User
-            await github.rest.issues.addAssignees({ owner, repo, issue_number: issueNumber, assignees: [actor] });
+            await github.rest.issues.addAssignees({ owner, repo, issue_number: issueNumber, assignees: [context.actor] });
 
             // 2. CONTEXT BUILDING
             const issue = await github.rest.issues.get({ owner, repo, issue_number: issueNumber });
             const body = issue.data.body || "";
-            const issueRegex = /#(\d+)/g;
-            const matches = [...body.matchAll(issueRegex)];
+            const matches = [...body.matchAll(/#(\d+)/g)];
             
             let contextContent = "\n\n---\n# 🧠 CONSOLIDATED CONTEXT\n";
             contextContent += "> **System Note:** Merged content from sub-issues.\n\n";
@@ -76,15 +79,12 @@ jobs:
             await github.rest.issues.update({ owner, repo, issue_number: issueNumber, body: body + contextContent });
             try { await github.rest.issues.removeLabel({ owner, repo, issue_number: issueNumber, name: 'context' }); } catch(e){}
             
-            // 3. TRIGGER PLANNING PHASE
+            // 3. TRIGGER PLANNING
             await github.rest.issues.addLabels({ 
               owner, repo, issue_number: issueNumber, 
               labels: ['jules', 'planning'] 
             });
 
-  # ------------------------------------------------------------------
-  # JOB 2: PROMOTE TO EXECUTION (Triggered by 👍 Reaction)
-  # ------------------------------------------------------------------
   approve_plan:
     if: github.event_name == 'issue_reaction' && github.event.reaction.content == '+1'
     runs-on: ubuntu-latest
@@ -97,11 +97,9 @@ jobs:
             const owner = context.repo.owner;
             const repo = context.repo.repo;
             const issueNumber = context.issue.number;
-            
             const issue = await github.rest.issues.get({ owner, repo, issue_number: issueNumber });
-            const labels = issue.data.labels.map(l => l.name);
             
-            if (labels.includes('planning')) {
+            if (issue.data.labels.some(l => l.name === 'planning')) {
               await github.rest.issues.removeLabel({ owner, repo, issue_number: issueNumber, name: 'planning' });
               await github.rest.issues.addLabels({ owner, repo, issue_number: issueNumber, labels: ['in progress', 'jules'] });
               await github.rest.issues.createComment({
@@ -110,9 +108,6 @@ jobs:
               });
             }
 
-  # ------------------------------------------------------------------
-  # JOB 3: STATUS UPDATE (Jules comments 'PR Created')
-  # ------------------------------------------------------------------
   update_status_review:
     if: github.event_name == 'issue_comment' && contains(github.event.comment.user.login, 'jules')
     runs-on: ubuntu-latest
@@ -123,17 +118,11 @@ jobs:
           script: |
             const body = context.payload.comment.body.toLowerCase();
             const issueNumber = context.issue.number;
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
-
             if (body.includes('pull request') || body.includes('/pull/')) {
-              try { await github.rest.issues.removeLabel({ owner, repo, issue_number: issueNumber, name: 'in progress' }); } catch(e){}
-              await github.rest.issues.addLabels({ owner, repo, issue_number: issueNumber, labels: ['in review'] });
+              try { await github.rest.issues.removeLabel({ owner: context.repo.owner, repo: context.repo.repo, issue_number: issueNumber, name: 'in progress' }); } catch(e){}
+              await github.rest.issues.addLabels({ owner: context.repo.owner, repo: context.repo.repo, issue_number: issueNumber, labels: ['in review'] });
             }
 
-  # ------------------------------------------------------------------
-  # JOB 4: COMPLETION (Merge PR)
-  # ------------------------------------------------------------------
   close_on_merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
@@ -145,22 +134,17 @@ jobs:
             const pr = context.payload.pull_request;
             const owner = context.repo.owner;
             const repo = context.repo.repo;
-            const body = pr.body || "";
-
-            const issueRegex = /#(\d+)/g;
-            const matches = [...body.matchAll(issueRegex)];
-            
+            const matches = [...(pr.body || "").matchAll(/#(\d+)/g)];
             if (matches.length === 0) return;
 
             for (const match of matches) {
               const batchId = parseInt(match[1]);
-              
               try { await github.rest.issues.removeLabel({ owner, repo, issue_number: batchId, name: 'in review' }); } catch(e){}
               await github.rest.issues.addLabels({ owner, repo, issue_number: batchId, labels: ['completed'] });
               await github.rest.issues.update({ owner, repo, issue_number: batchId, state: 'closed' });
 
               const batchIssue = await github.rest.issues.get({ owner, repo, issue_number: batchId });
-              const subMatches = [...(batchIssue.data.body || "").matchAll(issueRegex)];
+              const subMatches = [...(batchIssue.data.body || "").matchAll(/#(\d+)/g)];
               for (const sub of subMatches) {
                    const subId = parseInt(sub[1]);
                    if (subId === batchId) continue;
