--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "npx tsc && vite build",
     "preview": "vite preview",
+    "test": "playwright test",
+    "type-check": "npx tsc --noEmit",
     "prepare": "husky",
     "bump:major": "node scripts/manage-version.cjs --bump=major",
     "bump:minor": "node scripts/manage-version.cjs --bump=minor",
