--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "kasya",
   "private": true,
-  "version": "1.19.4",
+  "version": "1.20.1",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "npx tsc && vite build",
     "preview": "vite preview",
+    "test": "playwright test",
+    "type-check": "npx tsc --noEmit",
+    "changelog": "npx standard-version --skip.bump --skip.tag",
     "prepare": "husky",
     "bump:major": "node scripts/manage-version.cjs --bump=major",
     "bump:minor": "node scripts/manage-version.cjs --bump=minor",
@@ -28,8 +31,6 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^6.0.0",
-    "@commitlint/cli": "^20.2.0",
-    "@commitlint/config-conventional": "^20.2.0",
     "@playwright/test": "^1.57.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
