--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,10 @@
-
 {
   "name": "Kasya",
   "short_name": "Kasya",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#f8fafc",
-  "theme_color": "#14b8a6",
+  "theme_color": "#18181b",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
